se a local Mongo deployment for easier setup

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,1 +1,6 @@
-DATABASE_URL=<your-database-url>
+# Tell the backend how to connect to Mongo!
+DATABASE_URL="mongodb://<username>:<password>@mongodb_container:27017"
+
+# When Mongo starts up, specify the username and password it should look for.
+MONGO_INITDB_ROOT_USERNAME=<username>
+MONGO_INITDB_ROOT_PASSWORD=<password>
