--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - 5000:5000
     dns:
       - 8.8.8.8
+    depends_on:
+      - mongodb_container
   frontend:
     build:
       context: ./frontend
@@ -23,4 +25,14 @@ services:
       - 3000:3000
     environment:
       - CHOKIDAR_USEPOLLING=true
-      
+  mongodb_container:
+    image: mongo:6.0.3
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo_data:/data/db
+    env_file:
+      - ./backend/.env
+
+volumes:
+  mongo_data:
