--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,5 +28,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://bootcamp-mern-rest_backend_1:5000"
+  "proxy": "http://backend:5000"
 }
