Update README.md for S23

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,5 +1,5 @@
 # Tell the backend how to connect to Mongo!
-DATABASE_URL="mongodb://<username>:<password>@mongodb_container:27017"
+DATABASE_URL="<your-database-url>"
 
 # When Mongo starts up, specify the username and password it should look for.
 MONGO_INITDB_ROOT_USERNAME=<username>
